# fast-dev-cli

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README.zh.md  justfile  pdm.toml  pdm_build.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
fast_dev_cli/: __init__.py  __main__.py  cli.py
fast_tort_cli/: cli.py
scripts/: check.py  check.sh  deps.py  format.py  format.sh  test.py  test.sh  unittest.py
tests/: conftest.py  pyproject.toml  test_bump.py  test_click.py  test_deps.py  test_exec.py  test_fast_test.py  test_functions.py  test_help.py  test_import.py  test_lint.py  test_poetry_version_plugin.py  test_pypi.py  test_runserver.py  test_sync.py  test_tag.py  test_upgrade.py  test_upload.py  test_version.py  utils.py
