[project]
name = "fast-dev-cli"
dynamic = ["version"]
description = "Python project development tool."
authors = [{name = "Waket Zheng", email = "waketzheng@gmail.com>"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "typer>=0.24.0,<1",
    "tomli >=2.0.1,<3; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/waketzheng/fast-dev-cli"

[project.optional-dependencies]
standard = [
    "coverage >=7.5.1",
    "pytest >=8.2.0",
]
all = [
    "emoji >=2.12.1",
    "packaging >=20.5",
    "bandit>=1.7.9",
    "pytest-mock >=3.14.0",
    "fast-dev-cli[standard]"
]

[project.scripts]
fast = "fast_dev_cli.cli:main"

[dependency-groups]
dev = [
    "twine>=6.1.0",
    "asynctor>=0.10.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "file", path = "fast_dev_cli/__init__.py" }
distribution = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
parallel = true
source = ["fast_dev_cli"]
omit = [".venv/*", "*.bak/*"]
context = '${CONTEXT}'

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]
omit = ["tests/*", "fast_dev_cli/__main__.py"]

[tool.ty.src]
exclude = ['*.bak']
[tool.ty.rules]
unresolved-import = "ignore"
unused-ignore-comment = "ignore"
unused-type-ignore-comment = "ignore"
[tool.ty.environment]
python-version = "3.10"

[tool.mypy]
pretty = true
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
exclude = [
    "^fabfile\\.py$",  # TOML's double-quoted strings require escaping backslashes
    'two\.pyi$',  # but TOML's single-quoted strings do not
    '^\.venv',
    '\.bak',
    '__pypackages__',
]

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E501"]
"scripts/*.py" = ["UP009","UP032"]
"fast_dev_cli/cli.py" = ["UP007", "UP045"]

[tool.bandit]
exclude_dirs = ["tests", "scripts", "examples", ".venv"]

[tool.pdm.scripts]
up = 'just up {args}'
tree = 'pdm list --tree {args}'
deps = 'just deps {args}'
prod = 'pdm install --prod --frozen {args}'
fresh = {composite = ["up", "deps"]}
test = 'pdm run fast test {args}'
lint = 'just lint {args}'
check = 'just check {args}'
tag = "pdm run fast tag {args}"
bump = "pdm run fast bump patch --commit {args}"
ci = {composite = ["deps", "check", "test"]}
start = {composite = ["prek install", "deps"]}
style = {composite = ["ruff format", "ruff check --fix --unsafe-fixes {args}"]}
